# AdaptiveHuffmanCoding

./: .gitignore  CMakeLists.txt
include/: CodeTree.h  Coder.h  Core.h  Decoder.h  HuffmanCode.h  NameGenerator.h
src/: CodeTree.cpp  Coder.cpp  Decoder.cpp  HuffmanCode.cpp  Main.cpp
